Fix initial app loading indicator being too small

--- a/styles/reusable/_loading-indicator.scss
+++ b/styles/reusable/_loading-indicator.scss
@@ -9,6 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 .loading-indicator-auto-centered {
   position: absolute;
